german NUMPAD-COMMA is not tranlated to decimal dot #37992

Closed
opened 2013-12-30 16:59:57 +01:00 by Alexander N. · 8 comments
Member

System Information
Windows 8.1

Blender Version
Broken: blender-2.69-19103b4-win64.zip
Worked: blender-2.69-740c7e6-win64.zip

Short description of error
if i type in a decimal number for amount of affect modifier by using numpad, it does not convert numpad-comma to a decimal dot.
german keyboard. in the past, that comma was converted to a dot.

Exact steps for others to reproduce the error
with default cube scene.
hit S-key, and type in NUM-0, NUM-COMMA, NUM-1

  • the cube is scaled to 1.0
    issue_-numpad_comma[ger]_bad_0,1.png

hit S-key, and type in NUM-0, NUM-COMMA, NUM-0, NUM-0, NUM-1

  • the cube is scaled to 0
    issue_-numpad_comma[ger]_bad_0,001.png

Broken: blender-2.69-19103b4-win64.zip
issue_-numpad_comma[ger]_bad.mp4

Worked: blender-2.69-740c7e6-win64.zip
issue_-numpad_comma[ger]_good.mp4

**System Information** Windows 8.1 **Blender Version** Broken: blender-2.69-19103b4-win64.zip Worked: blender-2.69-740c7e6-win64.zip **Short description of error** if i type in a decimal number for amount of affect modifier by using numpad, it does not convert numpad-comma to a decimal dot. german keyboard. in the past, that comma was converted to a dot. **Exact steps for others to reproduce the error** with default cube scene. hit S-key, and type in NUM-0, NUM-COMMA, NUM-1 - >> the cube is scaled to 1.0 ![issue_-_numpad_comma_[ger]_bad_0,1.png](https://archive.blender.org/developer/F59186/issue_-_numpad_comma__ger__bad_0_1.png) hit S-key, and type in NUM-0, NUM-COMMA, NUM-0, NUM-0, NUM-1 - >> the cube is scaled to 0 ![issue_-_numpad_comma_[ger]_bad_0,001.png](https://archive.blender.org/developer/F59188/issue_-_numpad_comma__ger__bad_0_001.png) Broken: blender-2.69-19103b4-win64.zip [issue_-_numpad_comma_[ger]_bad.mp4](https://archive.blender.org/developer/F59182/issue_-_numpad_comma__ger__bad.mp4) Worked: blender-2.69-740c7e6-win64.zip [issue_-_numpad_comma_[ger]_good.mp4](https://archive.blender.org/developer/F59183/issue_-_numpad_comma__ger__good.mp4)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Bastien Montagne was assigned by Brecht Van Lommel 2013-12-31 01:43:54 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

I think number entry here now matches number buttons, which will directly use the characters you type. An exception could be made in the transform/numpinput code I guess, if the value entered is a comma and the keycode is numpad dot, it could convert to a dot?

I think number entry here now matches number buttons, which will directly use the characters you type. An exception could be made in the transform/numpinput code I guess, if the value entered is a comma and the keycode is numpad dot, it could convert to a dot?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1fa63b317a.

Closed by commit 1fa63b317a.

This issue was referenced by blender/blender-addons-contrib@1fa63b317a

This issue was referenced by blender/blender-addons-contrib@1fa63b317a032fc348dab1ca69a8358f0fb3ae02

This issue was referenced by 1fa63b317a

This issue was referenced by 1fa63b317a032fc348dab1ca69a8358f0fb3ae02
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37992
No description provided.