Fix T37992: german NUMPAD-COMMA is not tranlated to decimal dot (for modal  numinput).